--- a/Keaapp.html
+++ b/Keaapp.html
@@ -2,9 +2,10 @@
 <html lang="da">
 
 <head>
+    <meta name="robots" content="noindex">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1. semester Portfolio</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="style.css">
 
     <!------ Fonts -------->
@@ -21,53 +22,110 @@
 
 <body>
 
-    <!------ menu -------->
+    <!------ Burger menu -------->
 
-    <nav>
-        <ul>
+    <header>
 
-            <div class="menu">
-                <a href="index.html">Forside</a>
-                <a href="Portfolio.html">Portfolio</a>
-                <a href="Ommig.html">Om mig</a>
+        <div class="burgermenu">
+            <div class="menubutton">
+                <div class="bar bar1"></div>
+                <div class="bar bar2"></div>
+                <div class="bar bar3"></div>
             </div>
-        </ul>
-    </nav>
 
-    <!------ Sidens indhold -------->
-    <div class="Forside">
 
-        <h1>
-            KEA app
-        </h1>
+            <nav class="hidden">
+                <div class="burger">
+                    <li><a href="index.html">Forside</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="Ommig.html">Om mig</a></li>
 
-        <p>
-            <a href="http://shawnamercano.dk/kea/04-ux/01-bruger/index.html" target="_blank">Dokumentationssite</a>
-            <br>
+                </div>
+            </nav>
+        </div>
+    </header>
 
-            <a href="" target="_blank">Link til præsentation</a>
 
-        </p>
+    <!------ menu -------->
+    <div class="desktop">
+        <header>
+            <nav class="visible">
+                <ul>
+                    <li><a href="index.html">Forside</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="Ommig.html">Om mig</a></li>
 
+                </ul>
+            </nav>
+        </header>
     </div>
 
 
 
+
+    <!--------- Section redesign -------------->
+
+    <section id="keaapp">
+
+        <h1>
+            KEAapp
+        </h1>
+
+        <div class="section">
+
+            <div class="sectionwrapper">
+
+                <div class="column">
+                    <h3>Tema 4 - Grundlæggende UX
+                    </h3>
+                    <p>
+                        I det sidste tema på 1. semester blev vi introduceret til UX - User Experience. Vi sulle designe en app til KEA, med henblik på, at styrke relationen mellem de danske og internationale elvever. <br> For at skabe det mest optimale produkt, skulle vi tage udgangspunkt i brugernes behov i stedet for, at designe ud fra egen mavefornemmelse.
+                    </p>
+                    <p>
+                        Resultatet af opgaven blev 'myKEA' app. App'en er inspireret af facebook, messenger og Fronter. Med både skema, besked- og begivenheds funktion, er alle de vigtigste informationer samlet på ét sted. <br> Med disse funktioner, understøtter appen et større socialt og fagligt samspil mellem den danske og internationale studerende på KEA.
+                    </p>
+
+                </div>
+            </div>
+
+            <div class="column">
+
+                <img src="images/mykeaapp.png" alt="myKEA app logo">
+
+
+                <p>Link til Dokumentationssite og præsentation</p>
+                <p>
+                    <a href="http://shawnamercano.dk/kea/04-ux/01-bruger/index.html" target="_blank">Dokumentationssite</a>
+                    <br>
+
+                    <a href="http://shawnamercano.dk/kea/dokumenter/mykea_presentation.pdf" target="_blank">Link til præsentation</a>
+                </p>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+
+
+
+
     <!-- footer -->
-     <footer>
+    <footer>
         1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
-
-
-        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-
-        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
 
 
     </footer>
 
 
 
-    <!-- footer slut -->
+
+    <!----- JavaScript ----->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="javascript.js"></script>
 
 </body>
 
