--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,9 +2,10 @@
 <html lang="da">
 
 <head>
+    <meta name="robots" content="noindex">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1. semester Portfolio</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="style.css">
 
     <!------ Fonts -------->
@@ -21,20 +22,55 @@
 
 <body>
 
-    <!------ menu -------->
-    <nav>
-        <ul>
+    <!------ Burger menu -------->
 
-            <div class="menu">
-                <a href="index.html">Forside</a>
-                <a href="Portfolio.html">Portfolio</a>
-                <a href="Ommig.html">Om mig</a>
+    <header>
+
+        <div class="burgermenu">
+            <div class="menubutton">
+                <div class="bar bar1"></div>
+                <div class="bar bar2"></div>
+                <div class="bar bar3"></div>
             </div>
-        </ul>
-    </nav>
+
+
+            <nav class="hidden">
+                <div class="burger">
+                    <li><a href="index.html">Forside</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="Ommig.html">Om mig</a></li>
+
+                </div>
+            </nav>
+        </div>
+    </header>
+
+
+    <!------ menu -------->
+    <div class="desktop">
+        <header>
+            <nav class="visible">
+                <ul>
+                    <li><a href="index.html">Forside</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="Ommig.html">Om mig</a></li>
+
+                </ul>
+            </nav>
+        </header>
+    </div>
+
+
+
+
+
     <!------ Sidens indhold -------->
 
-    <h1>PORTFOLIO</h1>
+
+
+    <div class="overskrift">
+        <h1>PORTFOLIO</h1>
+    </div>
 
     <section id="portfolio">
 
@@ -59,7 +95,7 @@
             <div class="content">
                 <div class="pic">
 
-                    <a href="Stilartsite.html">
+                    <a href="stilartsite.html">
 <img border="0" alt="bauhaus icon" src="images/bauhaus.png" width="400" height="400">
 </a>
                 </div>
@@ -121,7 +157,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="Redesign.html">
+                    <a href="redesign.html">
 <img border="0" alt="redesign billede" src="images/Kong%20Gulerod.png" width="400" height="400">
 </a>
                 </div>
@@ -196,7 +232,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="Keaapp.html">
+                    <a href="keaapp.html">
 <img border="0" alt="KEA app billede" src="images/keaapp2.png" width="400" height="400">
 </a>
                 </div>
@@ -205,21 +241,19 @@
             <div class="content">
                 <div class="boks">
                     <div class="tekst">
-                        <div class="tekst">
-                            <h1>KEA app</h1>
-                            <br>
-                            <hr>
-                            <br>
+                        <h1>KEA app</h1>
+                        <br>
+                        <hr>
+                        <br>
 
-                            <p>
-                                Udvikling af en app til studerende på KEA. App'en myKEA har de vigtigste informationer samlet på ét sted - samtidig understøtter appen et større socialt og fagligt samspil mellem den danske og internationale multimediedesign studerende.
-                            </p>
-                        </div>
+                        <p>
+                            Udvikling af en app til studerende på KEA. App'en myKEA har de vigtigste informationer samlet på ét sted - samtidig understøtter appen et større socialt og fagligt samspil mellem den danske og internationale multimediedesign studerende.
+                        </p>
                     </div>
                 </div>
             </div>
-
         </div>
+
 
         <!--------- Række 7 ------------>
 
@@ -227,14 +261,14 @@
             <div class="content">
                 <div class="boks">
 
-<div class="tekst">
-                    <h1>Joe Loyalty app</h1>
-                    <br>
-                    <hr>
+                    <div class="tekst">
+                        <h1>Joe Loyalty app</h1>
+                        <br>
+                        <hr>
 
-                    <p>
-                        Forbedring af den allerede eksisterende app - Joe Loyalty. Fokus lå i at forbedre kundeoplevelsen og øge brugervenligheden.
-                    </p>
+                        <p>
+                            Forbedring af den allerede eksisterende app - Joe Loyalty. Fokus lå i at forbedre kundeoplevelsen og øge brugervenligheden.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -242,7 +276,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="Joeapp.html">
+                    <a href="joeapp.html">
 <img border="0" alt="Joe Loyalty billede" src="images/Joe%20app.png" width="400" height="400">
 </a>
                 </div>
@@ -256,21 +290,20 @@
     </section>
 
 
-    <!-- footer -->
 
+    <!-- footer -->
     <footer>
         1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
-
-
-        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-
-        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
 
 
     </footer>
 
 
-    <!-- footer slut -->
+
+
+    <!----- JavaScript ----->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="javascript.js"></script>
 
 </body>
 
