--- a/everydayproject.html
+++ b/everydayproject.html
@@ -2,9 +2,10 @@
 <html lang="da">
 
 <head>
+    <meta name="robots" content="noindex">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1. semester Portfolio</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="style.css">
 
     <!------ Fonts -------->
@@ -21,68 +22,104 @@
 
 <body>
 
-    <!------ menu -------->
+    <!------ Burger menu -------->
 
-    <nav>
-        <ul>
-            <div class="menu">
-                <a href="index.html">Forside</a>
-                <a href="Portfolio.html">Portfolio</a>
-                <a href="Ommig.html">Om mig</a>
+    <header>
+
+        <div class="burgermenu">
+            <div class="menubutton">
+                <div class="bar bar1"></div>
+                <div class="bar bar2"></div>
+                <div class="bar bar3"></div>
             </div>
-        </ul>
-    </nav>
-
-    <!------ Sidens indhold -------->
 
 
-    <h1>
-        Everyday project
-    </h1>
-    <section id="everyday">
+            <nav class="hidden">
+                <div class="burger">
+                    <li><a href="index.html">Forside</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="Ommig.html">Om mig</a></li>
 
-        <h3>Tema 3 - Grundlæggende Video
-        </h3>
-        <p>
-            I forbindelse med Copenhagen International Documentary Film Festival CPH:DOX, fik vi til opgave at lave en kort video til deres videoplatform, Everyday Project. <br> Opgave formuleringen var at vi skulle finde en eller flere personer som havde en spændende historie at fortælle og som forholdt sig til ét de to temaer: mennesket &amp; demokrati.
-        </p>
-        <br>
-        <p>
-            Vi blev delt op i grupper og første punkt på dagsordenen var at finde en person vi kunne interwieve.
-            <br> Da vi havde fundet en person til vores video interviw, kunne vå gå i gang med at planlægge videoens og interviewets opbygning. <br> I løbet af ugen fik vi stiftet bekendskab med og udviklet kompetencer indenfor interviewteknik, samt optagelse, klipning og redigering af film.
-        </p>
+                </div>
+            </nav>
+        </div>
+    </header>
 
 
-        <br>
-        <p> Resultatet blev denne video, der tager udgangspunkt i 24 årige Simon, der i løbet af det sidste år har tabt sig 80 kg.
-        </p>
-        <br>
-        <p>
+    <!------ menu -------->
+    <div class="desktop">
+        <header>
+            <nav class="visible">
+                <ul>
+                    <li><a href="index.html">Forside</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="Ommig.html">Om mig</a></li>
 
-        </p>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/3sH0J_qMW5M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </ul>
+            </nav>
+        </header>
+    </div>
 
 
 
+
+    <!--------- Section stilartsite -------------->
+
+
+    <section id="everydayproject">
+
+        <h1>
+            Everyday Project
+        </h1>
+
+        <div class="section">
+
+            <div class="sectionwrapper">
+
+                <div class="column">
+                    <h3>Tema 3 - Grundlæggende Video
+                    </h3>
+                    <p>
+                        I forbindelse med Copenhagen International Documentary Film Festival CPH:DOX, fik vi til opgave at lave en kort video til deres videoplatform, Everyday Project. <br> Opgave formuleringen var at vi skulle finde en eller flere personer som havde en spændende historie at fortælle og som forholdt sig til ét de to temaer: mennesket &amp; demokrati.
+                    </p>
+                    <br>
+                    <p>
+                        Vi blev delt op i grupper og første punkt på dagsordenen var at finde en person vi kunne interwieve.
+                        <br> Da vi havde fundet en person til vores video interviw, kunne vå gå i gang med at planlægge videoens og interviewets opbygning. <br> I løbet af ugen fik vi stiftet bekendskab med og udviklet kompetencer indenfor interviewteknik, samt optagelse, klipning og redigering af film.
+                    </p>
+
+
+                    <br>
+                    <p> Resultatet blev denne video, der tager udgangspunkt i 24 årige Simon, der i løbet af det sidste år har tabt sig 80 kg.
+                    </p>
+
+                    <div class="responsive">
+                        <iframe width="auto" height="auto" src="https://www.youtube.com/embed/3sH0J_qMW5M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
 
     </section>
+
+
+
 
     <!-- footer -->
     <footer>
         1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
 
 
-        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-
-        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-
-
     </footer>
 
 
 
-    <!-- footer slut -->
+
+    <!----- JavaScript ----->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="javascript.js"></script>
 
 </body>
 
