--- a/index.html
+++ b/index.html
@@ -60,15 +60,19 @@
         </header>
     </div>
 
+    <!------------ Forside-------- -->
+
+    <section id="forside">
 
 
 
-    <!-- Section 1 -->
 
 
 
+        <img src="images/forside.png" alt="joe app design">
 
 
+    </section>
 
 
 
