--- a/Portfolio.html
+++ b/Portfolio.html
@@ -95,7 +95,7 @@
             <div class="content">
                 <div class="pic">
 
-                    <a href="stilartsite.html">
+                    <a href="Stilartsite.html">
 <img border="0" alt="bauhaus icon" src="images/bauhaus.png" width="400" height="400">
 </a>
                 </div>
@@ -157,7 +157,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="redesign.html">
+                    <a href="Redesign.html">
 <img border="0" alt="redesign billede" src="images/Kong%20Gulerod.png" width="400" height="400">
 </a>
                 </div>
@@ -232,7 +232,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="keaapp.html">
+                    <a href="Keaapp.html">
 <img border="0" alt="KEA app billede" src="images/keaapp2.png" width="400" height="400">
 </a>
                 </div>
@@ -276,7 +276,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="joeapp.html">
+                    <a href="Joeapp.html">
 <img border="0" alt="Joe Loyalty billede" src="images/Joe%20app.png" width="400" height="400">
 </a>
                 </div>
