--- a/Joeapp.html
+++ b/Joeapp.html
@@ -37,8 +37,8 @@
             <nav class="hidden">
                 <div class="burger">
                     <li><a href="index.html">Forside</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Ommig.html">Om mig</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="ommig.html">Om mig</a></li>
 
                 </div>
             </nav>
@@ -52,8 +52,8 @@
             <nav class="visible">
                 <ul>
                     <li><a href="index.html">Forside</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Ommig.html">Om mig</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="ommig.html">Om mig</a></li>
 
                 </ul>
             </nav>
@@ -89,7 +89,7 @@
             <div class="column">
 
                 <h4>Reklameskilt og pamflet, designet til juice barene:</h4>
-                <img src="images/joereklame.png" alt="joe app design">
+                <img src="images/joereklame.png" alt="joe reklame">
 
 
                 <p>Link til Dokumentationssite og præsentation</p>
