--- a/Portfolio.html
+++ b/Portfolio.html
@@ -37,8 +37,8 @@
             <nav class="hidden">
                 <div class="burger">
                     <li><a href="index.html">Forside</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Ommig.html">Om mig</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="ommig.html">Om mig</a></li>
 
                 </div>
             </nav>
@@ -52,8 +52,8 @@
             <nav class="visible">
                 <ul>
                     <li><a href="index.html">Forside</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Ommig.html">Om mig</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="ommig.html">Om mig</a></li>
 
                 </ul>
             </nav>
@@ -95,7 +95,7 @@
             <div class="content">
                 <div class="pic">
 
-                    <a href="Stilartsite.html">
+                    <a href="stilartsite.html">
 <img border="0" alt="bauhaus icon" src="images/bauhaus.png" width="400" height="400">
 </a>
                 </div>
@@ -157,7 +157,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="Redesign.html">
+                    <a href="redesign.html">
 <img border="0" alt="redesign billede" src="images/Kong%20Gulerod.png" width="400" height="400">
 </a>
                 </div>
@@ -232,7 +232,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="Keaapp.html">
+                    <a href="keaapp.html">
 <img border="0" alt="KEA app billede" src="images/keaapp2.png" width="400" height="400">
 </a>
                 </div>
@@ -276,7 +276,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="Joeapp.html">
+                    <a href="joeapp.html">
 <img border="0" alt="Joe Loyalty billede" src="images/Joe%20app.png" width="400" height="400">
 </a>
                 </div>
