--- a/Ommig.html
+++ b/Ommig.html
@@ -37,8 +37,8 @@
             <nav class="hidden">
                 <div class="burger">
                     <li><a href="index.html">Forside</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Ommig.html">Om mig</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="ommig.html">Om mig</a></li>
 
                 </div>
             </nav>
@@ -52,8 +52,8 @@
             <nav class="visible">
                 <ul>
                     <li><a href="index.html">Forside</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Ommig.html">Om mig</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="ommig.html">Om mig</a></li>
 
                 </ul>
             </nav>
@@ -77,7 +77,7 @@
 
                 <div class="column">
 
-                    <img src="images/selvportr%C3%A6t.jpg" alt="myKEA app logo">
+                    <img src="images/selvportr%C3%A6t.jpg" alt="selvportræt">
 
                 </div>
             </div>
